tests/fail/test-neg-return-conflict2.ctds
integer x;

void hi(integer p){
  return p;
}